--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,9 +35,9 @@ jobs:
         python -m flake8
         # перейти в папку, содержащую manage.py — 
         # <корневая_папка_infra_actions>/<папка_проекта>/manage.py
-        # cd yamdb_final/
+        cd infra_project/
         # запустить написанные разработчиком тесты
-        # pytest
+        python manage.py test
 
   build_and_push_to_docker_hub:
     name: Push Docker image to Docker Hub
